Updates grafana dashboards

--- a/config/grafana/icingaweb2-grafana/graphs.ini
+++ b/config/grafana/icingaweb2-grafana/graphs.ini
@@ -1,44 +1,51 @@
-[Invoke-IcingaCheckMemory]
-dashboard = "Windows-Memory"
-panelId = "19"
-orgId = "1"
-repeatable = "no"
-dashboarduid = "8B_umxkVz"
-
-[Invoke-IcingaCheckCPU]
-dashboard = "Windows-Load"
-panelId = "4"
-orgId = "1"
-repeatable = "no"
-dashboarduid = "dTW6mbz4k"
-
-[Invoke-IcingaCheckService]
-dashboard = "Windows-Services"
-panelId = "86"
-orgId = "1"
-repeatable = "yes"
-dashboarduid = "cCUSkxk4k"
-
 [Invoke-IcingaCheckPartitionSpace]
-dashboard = "Windows-Disks"
+dashboard = "windows-plugins-web"
 panelId = "2"
-orgId = "1"
-repeatable = "yes"
-dashboarduid = "gBWOyTrnk"
-height = "300"
-
-[Invoke-IcingaCheckUpdates]
-dashboard = "Windows-Updates"
-panelId = "64,65,66,67,68"
-orgId = "1"
+orgId = ""
 repeatable = "no"
-dashboarduid = "3E6p6JzVk"
-height = "300"
+dashboarduid = "QsPVl5W4z"
 
 [Invoke-IcingaCheckNetworkInterface]
-dashboard = "Windows-Network"
-panelId = "31"
-orgId = "1"
+dashboard = "windows-plugins-web"
+panelId = "3"
+orgId = ""
 repeatable = "no"
-dashboarduid = "RFxiZbkVz"
-height = "300"
+dashboarduid = "QsPVl5W4z"
+height = "400"
+
+[Invoke-IcingaCheckUpdates]
+dashboard = "windows-plugins-web"
+panelId = "4"
+orgId = ""
+repeatable = "no"
+dashboarduid = "QsPVl5W4z"
+
+[Invoke-IcingaCheckUptime]
+dashboard = "windows-plugins-web"
+panelId = "6"
+orgId = ""
+repeatable = "no"
+dashboarduid = "QsPVl5W4z"
+height = "200"
+
+[Invoke-IcingaCheckCPU]
+dashboard = "windows-plugins-web"
+panelId = "8"
+orgId = ""
+repeatable = "no"
+dashboarduid = "QsPVl5W4z"
+
+[Invoke-IcingaCheckService]
+dashboard = "windows-plugins-web"
+panelId = "9"
+orgId = ""
+repeatable = "no"
+dashboarduid = "QsPVl5W4z"
+height = "500"
+
+[Invoke-IcingaCheckMemory]
+dashboard = "windows-plugins-web"
+panelId = "10"
+orgId = ""
+repeatable = "no"
+dashboarduid = "QsPVl5W4z"
