Fix Grafana dashboard integration

--- a/config/grafana/icingaweb2-grafana/graphs.ini
+++ b/config/grafana/icingaweb2-grafana/graphs.ini
@@ -49,3 +49,12 @@ panelId = "10"
 orgId = ""
 repeatable = "no"
 dashboarduid = "QsPVl5W4z"
+
+[hostalive]
+dashboard = "windows-plugins-web"
+panelId = "12"
+orgId = ""
+repeatable = "no"
+dashboarduid = "QsPVl5W4z"
+width = "100"
+height = "100"
