Adds flag to ignore service for time plugin

--- a/config/icinga/Invoke-IcingaCheckTimeSync.conf
+++ b/config/icinga/Invoke-IcingaCheckTimeSync.conf
@@ -26,6 +26,10 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
             value = "$IcingaCheckTimeSync_Int32_Port$"
             order = 7
         }
+        "-IgnoreService" = {
+            set_if = "$IcingaCheckTimeSync_Switchparameter_IgnoreService$"
+            order = 99
+        }
         "-NoPerfData" = {
             set_if = "$IcingaCheckTimeSync_Switchparameter_NoPerfData$"
             order = 99
@@ -83,4 +87,5 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
     }
     vars.IcingaCheckTimeSync_Switchparameter_NoPerfData = false
     vars.IcingaCheckTimeSync_Switchparameter_IPV4 = false
+    vars.IcingaCheckTimeSync_Switchparameter_IgnoreService = false
 }
