Adds support for UNC plugin to run with different user

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -2758,10 +2758,6 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
     import "PowerShell Base"
 
     arguments += {
-        "-C" = {
-            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUNCPath' "
-            order = 0
-        }
         "-Path" = {
             set_if = {{
                 var str = macro("$IcingaCheckUNCPath_String_Path$"); if (len(str) == 0) { return false; }; return true;
@@ -2779,6 +2775,42 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
                 return ("'" + str + "'");
             }}
             order = 2
+        }
+        "-DisplayAlias" = {
+            set_if = {{
+                var str = macro("$IcingaCheckUNCPath_String_DisplayAlias$"); if (len(str) == 0) { return false; }; return true;
+            }}
+            description = "Modifies the plugin output to not display the value provided within the `-Path` argument but to use this string value instead of shorten the output and make it more visual appealing."
+            value = {{
+                var str = macro("$IcingaCheckUNCPath_String_DisplayAlias$");
+                var argLen = len(str);
+                if (argLen == 0) {
+                    return;
+                }
+                if (argLen != 0 && str.substr(0,1) == "'" && str.substr(argLen - 1, argLen) == "'") {
+                    return str;
+                }
+                return ("'" + str + "'");
+            }}
+            order = 5
+        }
+        "-Verbosity" = {
+            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
+            value = "$IcingaCheckUNCPath_Object_Verbosity$"
+            order = 10
+        }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckUNCPath_Switchparameter_NoPerfData$"
+            order = 99
+        }
+        "-Password" = {
+            description = "The password to authenticate the given user for. Has to be a secure string"
+            value = "(ConvertTo-IcingaSecureString '$IcingaCheckUNCPath_Securestring_Password$')"
+            order = 4
+        }
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckUNCPath' "
+            order = 0
         }
         "-ThresholdInterval" = {
             set_if = {{
@@ -2798,46 +2830,13 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             }}
             order = 100
         }
-        "-Verbosity" = {
-            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
-            value = "$IcingaCheckUNCPath_Object_Verbosity$"
-            order = 8
-        }
-        "-CriticalTotal" = {
-            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
-            value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
-            order = 7
-        }
-        "-WarningTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
-            value = "$IcingaCheckUNCPath_Object_WarningTotal$"
-            order = 6
-        }
-        "-Warning" = {
-            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
-            value = "$IcingaCheckUNCPath_Object_Warning$"
-            order = 4
-        }
-        "-Critical" = {
-            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
-            value = "$IcingaCheckUNCPath_Object_Critical$"
-            order = 5
-        }
-        "-NoPerfData" = {
-            set_if = "$IcingaCheckUNCPath_Switchparameter_NoPerfData$"
-            order = 99
-        }
-        "-CheckUsedSpace" = {
-            set_if = "$IcingaCheckUNCPath_Switchparameter_CheckUsedSpace$"
-            order = 99
-        }
-        "-DisplayAlias" = {
+        "-User" = {
             set_if = {{
-                var str = macro("$IcingaCheckUNCPath_String_DisplayAlias$"); if (len(str) == 0) { return false; }; return true;
+                var str = macro("$IcingaCheckUNCPath_String_User$"); if (len(str) == 0) { return false; }; return true;
             }}
-            description = "Modifies the plugin output to not display the value provided within the `-Path` argument but to use this string value instead of shorten the output and make it more visual appealing."
+            description = "Provide a username and/or domain to run this check for. The format can either be 'domain\\user' or 'domain@user'"
             value = {{
-                var str = macro("$IcingaCheckUNCPath_String_DisplayAlias$");
+                var str = macro("$IcingaCheckUNCPath_String_User$");
                 var argLen = len(str);
                 if (argLen == 0) {
                     return;
@@ -2848,6 +2847,30 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
                 return ("'" + str + "'");
             }}
             order = 3
+        }
+        "-Critical" = {
+            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            value = "$IcingaCheckUNCPath_Object_Critical$"
+            order = 7
+        }
+        "-WarningTotal" = {
+            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            value = "$IcingaCheckUNCPath_Object_WarningTotal$"
+            order = 8
+        }
+        "-Warning" = {
+            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            value = "$IcingaCheckUNCPath_Object_Warning$"
+            order = 6
+        }
+        "-CheckUsedSpace" = {
+            set_if = "$IcingaCheckUNCPath_Switchparameter_CheckUsedSpace$"
+            order = 99
+        }
+        "-CriticalTotal" = {
+            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
+            order = 9
         }
     }
     vars.IcingaCheckUNCPath_Switchparameter_CheckUsedSpace = false
@@ -3717,7 +3740,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the rollup update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -3735,7 +3758,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
@@ -3767,7 +3790,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 100
         }
         "-WarningOther" = {
-            description = "The warning threshold for all other updates on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningOther$"
             order = 11
         }
@@ -3782,7 +3805,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 10
         }
         "-CriticalRollups" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalRollups$"
             order = 8
         }
@@ -3819,7 +3842,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 2
         }
         "-WarningSecurity" = {
-            description = "The warning threshold for the security update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningSecurity$"
             order = 5
         }
