Updates CPU check to new provider

--- a/config/icinga/Invoke-IcingaCheckCPU.conf
+++ b/config/icinga/Invoke-IcingaCheckCPU.conf
@@ -6,9 +6,27 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckCPU' "
             order = 0
         }
-        "-Verbosity" = {
-            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
-            value = "$IcingaCheckCPU_Int32_Verbosity$"
+        "-SocketFilter" = {
+            description = "Allows to specify one or mutlitple sockets by using their socket id. Not matching socket id's will not be evaluated by the plugin."
+            value = {{
+                var arr = macro("$IcingaCheckCPU_Array_SocketFilter$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
             order = 5
         }
         "-ThresholdInterval" = {
@@ -28,6 +46,11 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
                 return ("'" + str + "'");
             }}
             order = 100
+        }
+        "-Verbosity" = {
+            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
+            value = "$IcingaCheckCPU_Int32_Verbosity$"
+            order = 6
         }
         "-Core" = {
             set_if = {{
@@ -61,6 +84,11 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
             order = 99
         }
+        "-OverallOnly" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_OverallOnly$"
+            order = 99
+        }
     }
     vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
+    vars.IcingaCheckCPU_Switchparameter_OverallOnly = false
 }
