--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -2502,7 +2502,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 12
         }
         "-WarningLargestFile" = {
-            description = "Checks the resulting file count of the provided filters and input and returns warning for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the largest file size found for the given filters and input and returns warning for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_WarningLargestFile$"
             order = 10
         }
@@ -2580,7 +2580,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 6
         }
         "-CriticalSmallestFile" = {
-            description = "Checks the resulting file count of the provided filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the smallest file size found for the given filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_CriticalSmallestFile$"
             order = 9
         }
@@ -2635,7 +2635,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 4
         }
         "-CriticalAverageFile" = {
-            description = "Checks the average file size found for the given filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the resulting file count of the provided filters and input and returns critical for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_CriticalAverageFile$"
             order = 13
         }
@@ -2699,7 +2699,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 3
         }
         "-WarningSmallestFile" = {
-            description = "Checks the resulting file count of the provided filters and input and returns warning for the provided threshold.  Follows the Icinga plugin threshold guidelines."
+            description = "Checks the smallest file size found for the given filters and input and returns warning for the provided threshold.  Follows the Icinga plugin threshold guidelines."
             value = "$IcingaCheckDirectory_Object_WarningSmallestFile$"
             order = 8
         }
@@ -2868,7 +2868,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 99
         }
         "-CriticalTotal" = {
-            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 9
         }
@@ -3018,7 +3018,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-WarningPl" = {
-            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -3346,9 +3346,27 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckCPU' "
             order = 0
         }
-        "-Verbosity" = {
-            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
-            value = "$IcingaCheckCPU_Int32_Verbosity$"
+        "-SocketFilter" = {
+            description = "Allows to specify one or mutlitple sockets by using their socket id. Not matching socket id's will not be evaluated by the plugin."
+            value = {{
+                var arr = macro("$IcingaCheckCPU_Array_SocketFilter$");
+                if (len(arr) == 0) {
+                    return "@()";
+                }
+                var psarr = arr.map(
+                    x => if (typeof(x) == String) {
+                        var argLen = len(x);
+                        if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                            x;
+                        } else {
+                            "'" + x + "'";
+                        }
+                    } else {
+                        x;
+                    }
+                ).join(",");
+                return "@(" + psarr + ")";
+            }}
             order = 5
         }
         "-ThresholdInterval" = {
@@ -3368,6 +3386,11 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
                 return ("'" + str + "'");
             }}
             order = 100
+        }
+        "-Verbosity" = {
+            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
+            value = "$IcingaCheckCPU_Int32_Verbosity$"
+            order = 6
         }
         "-Core" = {
             set_if = {{
@@ -3401,8 +3424,13 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
             order = 99
         }
+        "-OverallOnly" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_OverallOnly$"
+            order = 99
+        }
     }
     vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
+    vars.IcingaCheckCPU_Switchparameter_OverallOnly = false
 }
 
 object CheckCommand "Invoke-IcingaCheckTCP" {
@@ -3740,7 +3768,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
 
     arguments += {
         "-WarningRollups" = {
-            description = "The warning threshold for the total pending update count on the Windows machine"
+            description = "The warning threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningRollups$"
             order = 7
         }
@@ -3767,7 +3795,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 0
         }
         "-WarningDefender" = {
-            description = "The warning threshold for the Microsoft Defender update count on the Windows machine"
+            description = "The warning threshold for the total pending update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_WarningDefender$"
             order = 9
         }
@@ -3847,7 +3875,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the security update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
